# habit_tracker

./: .env.sample  Dockerfile_celery  Dockerfile_web  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habit/: models.py  paginators.py  serializers.py  tasks.py  tests.py  tgAPI.py  urls.py  validators.py  views.py
habit/management/commands/: create_group.py
habit/migrations/: 0001_initial.py  0002_delete_profile.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
