[project]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Vnukov",email = "Vnukoff@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apiclient (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
